--- a/src/utils/locales/ar/translation.json
+++ b/src/utils/locales/ar/translation.json
@@ -12,5 +12,17 @@
     "essentials": "تسوق الضروريات من متجرنا الإلكتروني",
     "hotels": "احجز فنادق أو شقق لإقامتك",
     "groceries": "اكتشف الاحتياجات اليومية والبقالة الطازجة"
-  }
+  },
+  "whishlist_category_labels": {
+    "food": "طعام",
+    "grocery": "بقالة",
+    "hotel": "فنادق وشقق",
+    "health": "الصحة والجمال",
+    "eshop": "متجر إلكتروني",
+    "rent": "تأجير السيارات"
+  },
+  "busy":"مشغول",
+  "km":"كم",
+  "mins":"دقائق",
+  "Wishlist":"قائمة الرغبات"
 }
