current loaction Check

--- a/src/utils/locales/ar/translation.json
+++ b/src/utils/locales/ar/translation.json
@@ -24,5 +24,7 @@
   "busy":"مشغول",
   "km":"كم",
   "mins":"دقائق",
-  "Wishlist":"قائمة الرغبات"
+  "Wishlist":"قائمة الرغبات",
+  "order_now": "ORDER NOW",
+  "BEST FOOD FOREVER":"أفضل طعام إلى الأبد"
 }
