--- a/src/utils/locales/en/translation.json
+++ b/src/utils/locales/en/translation.json
@@ -24,6 +24,8 @@
   "busy":"Busy",
   "km":"km",
   "mins":"mins",
-  "Wishlist":"Wishlist"
+  "Wishlist":"Wishlist",
+  "order_now": "اطلب الآن",
+ "BEST FOOD FOREVER":"BEST FOOD FOREVER"
 
 }
